--- a/styles.css
+++ b/styles.css
@@ -287,24 +287,27 @@ margin-right: 200px; /* Add margin to the left side of image */
     background-color: black;
     border-radius: 50%;
     margin-right: 10px;
-  }
+  } .copyright {
+  position: relative;
+  width: 100%;
+  height: 25px;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+}.copyright a{
+  color: white;
+}
+@media (max-width: 768px) {
   .copyright {
-    position: relative;
-    width: 100%;
-    height: 25px;
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    bottom: 0;
+    height: 100%;
   }
-  @media (max-width: 768px) {
-    .copyright {
-      flex-direction: column;
-      align-items: center;
-      bottom: 0;
-      height: 100%;
-    }
-  }
+}.copyright a{
+  color: white;
+}
 
 
 
